Simple Quiz App

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <div id="container">
+        <h1 id="heading"></h1>
         <textarea name="questions" id="question" cols="80 " rows="8"></textarea><br/>
         <input type="radio" class="radio2" id="radio1" name="radio"> <label id="option1" for="radio1"></label><br/>
         <input type="radio" class="radio1" id="radio2" name="radio"> <label id="option2" for="radio2"></label><br/>
