--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 <body>
     <div id="container">
         <h1 id="heading"></h1>
-        <textarea name="questions" id="question" cols="80 " rows="8"></textarea><br/>
+        <p name="questions" id="question" cols="80 " rows="8"></p><br/>
         <input type="radio" class="radio2" id="radio1" name="radio"> <label id="option1" for="radio1"></label><br/>
         <input type="radio" class="radio1" id="radio2" name="radio"> <label id="option2" for="radio2"></label><br/>
         <p  id="result"></p>
